syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Calculator {
  repeated double numbers = 1;
}

message CalculatorRequest {
  Calculator calculator = 1;
}

message CalculatorResponse {
  double result = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 number = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
  // Unary
  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) 
  returns (stream PrimeNumberDecompositionResponse) {};

  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  // BiDi Streaming
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

  // error handling
  // this RPC will throw an exception if the sent number is negative
  // the error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest)returns (SquareRootResponse) {};
}